--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,56 +16,56 @@ body {
     flex: 1 0 auto;
 }
 
-
-
-#info {
-    display: none;
-    background-color: #f3f3f3;
-    border-radius: 25px;
-    padding: 20px 25px;
-    box-shadow: 1px 2px 10px grey;
-    margin: 40px;
+.hero-item {
+    width: 88%;
+    height: 100%;
+    max-width: 2048px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    margin: 0 auto;
+    overflow: hidden;
 }
 
-h1, h2, h3 {
-    color: #3a81b7;
+.carousel-caption {
+    top: calc(50%);
+    transform: translateY(-50%);
+    max-width: 520px;
+    text-align: left;
+    position: absolute;
+    z-index: 1;
+    left: auto;
 }
 
-h1 {
-    display: block;
-    font-size: 4em;
-    margin-block-start: 0.67em;
-    margin-block-end: 0.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-
+.carousel-control-next, .carousel-control-prev {
+    width: 5%;
 }
 
-h2 {
-    display: block;
-    font-size: 1.5em;
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-}
 
-p {
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    line-height: 1em;
-}
 
 .btn-primary {
+    font-size: 15px;
+    display: inline-block;
+    max-width: 100%;
+    padding: 10px 20px 6px 22px !important;
+    overflow: hidden;
+    border: 2px solid transparent;
+    color: #fff !important;
+    background: #107c10;
+    line-height: 1.3;
+    text-decoration: none;
+    text-align: center;
+    letter-spacing: 0.07em;
+    white-space: nowrap;
+    transition: scale .2s ease-in-out;
+}
+.btn-primary:hover {
     color: #fff;
-    background-color: #3a81b7;
-    border-color: #3a81b7;
-    margin: 15px;
+    background-color: #0f760f;
+    border-color: #0f760f;
 }
 
 
@@ -75,7 +75,5 @@ footer {
     padding: 5px 0 1px 0;
     color: white;
     font-size: small;
-    /* margin-bottom: 0; */
-    border-top: 8px solid #3a81b7;
     flex-shrink: 0;
 }
